--- a/playbooks/ohpc-head.yaml
+++ b/playbooks/ohpc-head.yaml
@@ -40,34 +40,16 @@
         path: /etc/hosts
         line: "10.5.0.8    head.localdomain head"
 
-    - name: Create munge group with GID 120
-      ansible.builtin.group:
-        name: munge
-        gid: 120
-        system: true
-        state: present
-
-    - name: Create munge user with UID 120
-      ansible.builtin.user:
-        name: munge
-        uid: 120
-        group: munge
-        home: /run/munge
-        shell: /sbin/nologin
-        comment: "Runs Uid N Gid Emporium"
-        system: true
-        state: present
-
     - name: Install OHPC release
       ansible.builtin.dnf:
         name: http://repos.openhpc.community/OpenHPC/3/EL_9/{{ arch }}/ohpc-release-3-1.el9.{{ arch }}.rpm
         disable_gpg_check: true
 
-    - name: Add OpenHPC Release Factory (3.2)
+    - name: Add OpenHPC Release Factory (3.3)
       ansible.builtin.yum_repository:
         name: openhpc-factory
         description: OpenHPC 3.2 Factory Repository
-        baseurl: http://obs.openhpc.community:82/OpenHPC3:/3.2:/Factory/EL_9/
+        baseurl: http://obs.openhpc.community:82/OpenHPC3:/3.3:/Factory/EL_9/
         enabled: true
         gpgcheck: false
 
@@ -84,13 +66,13 @@
           - initscripts-service # AlmaLinux
 
     - name: Install Warewulf (OHPC)
-      when: not warewulf_release
+      when: warewulf_ohpc
       ansible.builtin.dnf:
         name:
           - warewulf-ohpc
 
     - name: Install Warewulf (Direct)
-      when: warewulf_release
+      when: not warewulf_ohpc
       ansible.builtin.dnf:
         name:
           - "{{ warewulf_rpm }}"
@@ -134,6 +116,7 @@
 
         ## Warewulf
         wwctl configure --all
+        bash /etc/profile.d/ssh_setup.sh # setup ssh
 
         ## Slurm
         cp /etc/slurm/slurm.conf.ohpc /etc/slurm/slurm.conf
@@ -149,13 +132,13 @@
         systemctl enable --now slurmctld
 
         ## Import node image
-        wwctl image import docker://ghcr.io/warewulf/warewulf-rockylinux:9 rocky-9
+        wwctl image import docker://ghcr.io/warewulf/warewulf-rockylinux:9 rocky-9 --syncuser
 
         ## Create "nodes" profile and inherit settings from the "default" profile
-        wwctl profile add nodes --profile default --comment "Nodes profile"
+        wwctl profile add nodes --profile=default --comment="Nodes profile"
 
         ## Configure "default" network (netname) for "nodes" profile
-        wwctl profile set --yes nodes --netname eth0 --netmask=${internal_netmask} --gateway=${ipv4_gateway} --nettagadd=DNS=${dns_servers}
+        wwctl profile set --yes nodes --netname=default --netmask=${internal_netmask} --gateway=${ipv4_gateway} --nettagadd=DNS=${dns_servers}
 
         ## Create a test user
         useradd --create-home --shell=/bin/bash --user-group auser
@@ -174,6 +157,7 @@
         set -e
 
         sms_ip=10.5.0.8
+        arch=$(uname -m)
 
         wwctl image exec rocky-9 /bin/bash <<EOF
         #export YUM_MIRROR_BASE=https://mirror.usi.edu/pub/rocky # optional mirror
@@ -187,7 +171,7 @@
         passwd -d root # allow serial console login
 
         dnf config-manager --add-repo http://obs.openhpc.community:82/OpenHPC3:/3.3:/Factory/EL_9/
-        dnf install -y http://repos.openhpc.community/OpenHPC/3/EL_9/{{ arch }}/ohpc-release-3-1.el9.{{ arch }}.rpm
+        dnf install -y http://repos.openhpc.community/OpenHPC/3/EL_9/${arch}/ohpc-release-3-1.el9.${arch}.rpm
 
         dnf install -y ohpc-base-compute hwloc-ohpc
         dnf install -y ohpc-slurm-client
