--- a/playbooks/image-ubuntu.yaml
+++ b/playbooks/image-ubuntu.yaml
@@ -3,8 +3,8 @@
   become: true
   tasks:
     - name: Generate compute node image
-      ansible.builtin.shell: |
-        set -e
+      ansible.builtin.shell: |-
+        set -e -x
 
         ## Config
         sms_ip=10.5.0.8
@@ -14,52 +14,53 @@
         wwctl image syncuser ubuntu-24.04 --write # set head uid/gid in image before install
 
         ## Build and configure node
-        wwctl image exec --syncuser ubuntu-24.04 /bin/bash <<EOF
-          set -e
+        wwctl image exec --syncuser ubuntu-24.04 /bin/bash << EXEC
+        set -e -x
 
-          ## Debug
-          passwd -d root # allow serial console login
+        ## Debug
+        passwd -d root # allow serial console login
 
-          ## Update image
-          export DEBIAN_FRONTEND=noninteractive
-          apt-get update
-          apt-get install --yes apt-utils
-          apt-get dist-upgrade --yes
+        ## Update image
+        export DEBIAN_FRONTEND=noninteractive
+        apt-get update
+        apt-get install --yes apt-utils
+        apt-get dist-upgrade --yes
 
-          ## Install kernel
-          apt-get install --yes --no-install-recommends linux-image-generic linux-tools-generic
-          rm -vf /initrd.img* /vmlinuz*
+        ## Install kernel
+        apt-get install --yes --no-install-recommends linux-image-generic linux-tools-generic
+        rm -vf /initrd.img* /vmlinuz*
 
-          ## Install base packages
-          apt-get install --yes --no-install-recommends curl jq zstd cpio procps iproute2 busybox-static
-          apt-get install --yes --no-install-recommends init udev dbus polkitd
-          apt-get install --yes --no-install-recommends systemd-timesyncd systemd-resolved ifupdown
-          apt-get install --yes --no-install-recommends openssh-server python3
-          apt-get install --yes less vim
+        ## Install base packages
+        apt-get install --yes --no-install-recommends curl jq zstd cpio procps iproute2 busybox-static
+        apt-get install --yes --no-install-recommends init udev dbus polkitd
+        apt-get install --yes --no-install-recommends systemd-timesyncd systemd-resolved ifupdown
+        apt-get install --yes --no-install-recommends openssh-server python3
+        apt-get install --yes less vim
 
-          ## Network
-          #systemctl enable systemd-networkd
+        ## Network
+        #systemctl enable systemd-networkd
 
-          ## Munge
-          mount -t devpts devpts /dev/pts ## FIXME: workarround
-          install -dv --mode=700 --owner=munge --group=munge /etc/munge
-          touch /etc/munge/munge.key ## blank file will be replace with the overlay (bypass image install error)
-          apt-get install --yes munge
-          systemctl enable munge
-          umount /dev/pts ## workarround
+        ## Munge
+        mount -t devpts devpts /dev/pts ## FIXME: workarround
+        install -dv --mode=700 --owner=munge --group=munge /etc/munge
+        touch /etc/munge/munge.key ## blank file will be replace with the overlay (bypass image install error)
+        apt-get install --yes munge
+        systemctl enable munge
+        umount /dev/pts ## workarround
 
-          ## Slurm
-          apt-get install --yes slurmd
-          echo SLURMD_OPTIONS="--conf-server ${sms_ip}" > /etc/default/slurmd
-          systemctl enable slurmd
+        ## Slurm
+        apt-get install --yes slurmd
+        echo SLURMD_OPTIONS="--conf-server ${sms_ip}" > /etc/default/slurmd
+        systemctl enable slurmd
 
-          ## Lmod
-          apt-get install --yes lmod
+        ## Lmod
+        apt-get install --yes lmod
 
-          ## Cleanup and exit
-          apt-get clean
-          echo "exit image"
-        EOF
+        ## Cleanup and exit
+        apt-get clean
+        echo "exit image"
+        EXEC
+        #### End Configure Image
 
         ## Set profile
         wwctl profile set --yes nodes --image=ubuntu-24.04
