Use built in callback

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = local.ini,vars.ini
 interpreter_python = auto_silent
-result_format = yaml
-stdout_callback = yaml
-bin_ansible_callbacks = True
+callback_result_format = yaml
+callback_format_pretty = true
+display_failed_stderr = true
