--- a/vars.ini
+++ b/vars.ini
@@ -2,6 +2,6 @@
 localhost ansible_connection=local
 
 [ohpc:vars]
-warewulf_build = False    # build Warewulf from source
 warewulf_ohpc  = True     # use OpenHPC release for Warewulf on OpenHPC
-warewulf_rpm = https://github.com/warewulf/warewulf/releases/download/v4.6.0/warewulf-4.6.0-1.el9.x86_64.rpm
+warewulf_build = False    # build Warewulf from source, otherwise use $warewulf_rpm
+warewulf_rpm   = https://github.com/warewulf/warewulf/releases/download/v4.6.0/warewulf-4.6.0-1.el9.x86_64.rpm
