--- a/vars.ini
+++ b/vars.ini
@@ -2,6 +2,9 @@
 localhost ansible_connection=local
 
 [ohpc:vars]
-warewulf_ohpc  = True     # use OpenHPC release for Warewulf on OpenHPC
-warewulf_build = False    # build Warewulf from source, otherwise use $warewulf_rpm
-warewulf_rpm   = https://github.com/warewulf/warewulf/releases/download/v4.6.0/warewulf-4.6.0-1.el9.x86_64.rpm
+warewulf_ohpc   = True  # use OpenHPC release for Warewulf on OpenHPC
+warewulf_build  = False # build Warewulf from source, otherwise use $warewulf_rpm
+
+warewulf_rpm_account = middelkoopt
+warewulf_rpm_version = 4.6.1tm0
+warewulf_container   = docker://ghcr.io/middelkoopt/warewulf-almalinux:9
