--- a/vars.ini
+++ b/vars.ini
@@ -4,6 +4,7 @@ localhost ansible_connection=local
 [ohpc:vars]
 warewulf_ohpc   = True  # use OpenHPC release for Warewulf on OpenHPC
 warewulf_build  = False # build Warewulf from source, otherwise use $warewulf_rpm
+warewulf_dracut = True
 
 warewulf_rpm_account = middelkoopt
 warewulf_rpm_version = 4.6.1tm0
