--- a/playbooks/warewulf-head.yaml
+++ b/playbooks/warewulf-head.yaml
@@ -88,7 +88,9 @@
     - name: Install Warewulf from package
       ansible.builtin.dnf:
         name:
-          - "https://github.com/{{ warewulf_rpm_account }}/warewulf/releases/download/v{{ warewulf_rpm_version }}/warewulf-{{ warewulf_rpm_version }}-1.el9.{{ arch }}.rpm"
+          - "https://github.com/{{ warewulf_rpm_account }}/warewulf/releases/download/\
+            {{ 'nightly' if warewulf_rpm_nightly else 'v' + warewulf_rpm_version }}/\
+            warewulf-{{ warewulf_rpm_version }}-1.el9.{{ arch }}.rpm"
         disable_gpg_check: true
       when:
         - ansible_pkg_mgr == "dnf"
@@ -97,8 +99,8 @@
     - name: Build Warewulf from source
       # noqa: command-instead-of-module
       environment:
-        WWVERSION:  "{{ warewulf_rpm_version }}"
-        WWACCOUNT:  "{{ warewulf_rpm_account }}"
+        WWVERSION: "{{ warewulf_rpm_version }}"
+        WWACCOUNT: "{{ warewulf_rpm_account }}"
       ansible.builtin.shell: |-
         set -e -x
 
@@ -110,7 +112,7 @@
         rm -rf /usr/src/warewulf
         git clone --no-checkout https://github.com/${WWACCOUNT}/warewulf.git /usr/src/warewulf
         cd /usr/src/warewulf
-        git checkout -B ${WWVERSION}
+        git checkout -B v${WWVERSION}
 
         ## Build Warewulf
         make clean
