--- a/vars.ini
+++ b/vars.ini
@@ -2,10 +2,13 @@
 localhost ansible_connection=local
 
 [ohpc:vars]
-warewulf_ohpc   = True  # use OpenHPC release for Warewulf on OpenHPC
-warewulf_build  = False # build Warewulf from source, otherwise use $warewulf_rpm
-warewulf_dracut = True
+warewulf_ohpc   = True  # OpenHPC: use OpenHPC build of Warewulf
+warewulf_build  = False # Warewulf: build Warewulf from source, otherwise use $warewulf_rpm
+warewulf_dracut = True  # Warewulf: boot w/ Dracut
 
+; warewulf_rpm_account = warewulf
+; warewulf_rpm_version = 4.6.1
 warewulf_rpm_account = middelkoopt
-warewulf_rpm_version = 4.6.1tm0
+warewulf_rpm_version = 4.6.2tm1
+warewulf_rpm_nightly = False
 warewulf_container   = docker://ghcr.io/middelkoopt/warewulf-almalinux:9
