--- a/vars.ini
+++ b/vars.ini
@@ -2,10 +2,13 @@
 localhost ansible_connection=local
 
 [ohpc:vars]
-warewulf_ohpc   = True  # OpenHPC: use OpenHPC build of Warewulf
-warewulf_build  = False # Warewulf: build Warewulf from source, otherwise use $warewulf_rpm
-warewulf_dracut = True  # Warewulf: boot w/ Dracut
+# ohpc-head
+ohpc_warewulf     = False  # OpenHPC: use OpenHPC build of Warewulf
+ohpc_warewulf_rpm = /home/almalinux/warewulf-ohpc-4.6.1-19999.ci.ohpc.x86_64.rpm
 
+# warewulf-head
+warewulf_build  = False # build Warewulf from source, otherwise use version below
+warewulf_dracut = True  # boot w/ Dracut
 ; warewulf_rpm_account = warewulf
 ; warewulf_rpm_version = 4.6.1
 warewulf_rpm_account = middelkoopt
