Add Chameleoncloud KVM@TACC support

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = local.ini,vars.ini
+inventory = vars.ini,${OS_NAME}/local.ini
 interpreter_python = auto_silent
 callback_result_format = yaml
 callback_format_pretty = true
