--- a/vars.ini
+++ b/vars.ini
@@ -3,8 +3,8 @@ localhost ansible_connection=local
 
 [ohpc:vars]
 # ohpc-head
-ohpc_warewulf     = False  # OpenHPC: use OpenHPC build of Warewulf
-ohpc_warewulf_rpm = /home/almalinux/warewulf-ohpc-4.6.1-19999.ci.ohpc.x86_64.rpm
+ohpc_warewulf     = True  # OpenHPC: use OpenHPC build of Warewulf
+ohpc_warewulf_rpm = False
 
 # warewulf-head
 warewulf_build  = False # build Warewulf from source, otherwise use version below
