--- a/vars.ini
+++ b/vars.ini
@@ -8,10 +8,10 @@ ohpc_warewulf_rpm = False
 
 # warewulf-head
 warewulf_build  = False # build Warewulf from source, otherwise use version below
-warewulf_dracut = True  # boot w/ Dracut
+warewulf_dracut = False # boot w/ Dracut
 ; warewulf_rpm_account = warewulf
 ; warewulf_rpm_version = 4.6.1
-warewulf_rpm_account = middelkoopt
-warewulf_rpm_version = 4.6.2tm1
+warewulf_rpm_account = warewulf
+warewulf_rpm_version = 4.6.1
 warewulf_rpm_nightly = False
-warewulf_container   = docker://ghcr.io/middelkoopt/warewulf-almalinux:9
+warewulf_container   = docker://ghcr.io/warewulf/warewulf-almalinux:9
