--- a/vars.ini
+++ b/vars.ini
@@ -5,13 +5,12 @@ localhost ansible_connection=local
 # ohpc-head
 ohpc_warewulf     = True  # OpenHPC: use OpenHPC build of Warewulf
 ohpc_warewulf_rpm = False
+ohpc_factory      = False  # OpenHPC: use OpenHPC factory
 
 # warewulf-head
-warewulf_build  = True # build Warewulf from source, otherwise use version below
-warewulf_dracut = False # boot w/ Dracut
-; warewulf_rpm_account = warewulf
-; warewulf_rpm_version = 4.6.1
-warewulf_rpm_account = middelkoopt
-warewulf_rpm_version = tm-dev
+warewulf_build       = False # build Warewulf from source, otherwise use version below
+warewulf_rpm_account = warewulf
+warewulf_rpm_version = 4.6.1
 warewulf_rpm_nightly = False
 warewulf_container   = docker://ghcr.io/middelkoopt/warewulf-almalinux:9
+warewulf_dracut      = False # boot w/ Dracut
